# bevy-platformer

./: Cargo.toml  LICENSE  README.md
src/: animation.rs  main.rs  platforms.rs  player.rs
