[package]
name = "bevy_platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_rapier2d = "0.21.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
